SERVER-42835 Fix inconsistent handling of arrays as $group keys